@@ -270,7 +270,12 @@ class PortalBoxGroup(BaseTemplet, SimpleBox):
             # add the box decoration
             title = portlet.title
             if box_title_i18n and mcat is not None:
-                title = mcat(title).encode('ISO-8859-15', 'ignore')
+                title = mcat(title)
+                try:
+                    title = title.encode('ISO-8859-15', 'ignore')
+                except UnicodeDecodeError:
+                    LOG("PortalBoxGroup.render", DEBUG,
+                        "UnicodeDecodeError on %r"%(title,))
             rendered = renderBoxLayout(
                 boxlayout=boxlayout,
                 title=title,
